fix: prevent white flash in dark mode when navigate

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -30,7 +30,7 @@
   }
   body {
     @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base 
-    transition-colors selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
+    selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
   }
   section,
   footer {
